--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta charset="UTF-8" />
     <title>BoxRGB</title>
     <script src="phaser.min.js"></script>
+    <script src="src/worldConstants.js"></script>
     <script src="src/boxRGB.js"></script>
     <script src="src/boxObject/AssetsManager.js"></script>
     <script src="src/boxObject/BoxFactory.js"></script>
+    <script src="src/boxObject/boxConstants.js"></script>
+   
+
     <style type="text/css">
         body {
             margin: 0;
