button selection added

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <script src="phaser.min.js"></script>
     <script src="src/worldConstants.js"></script>
     <script src="src/boxRGB.js"></script>
-    <script src="src/boxObject/AssetsManager.js"></script>
+    <script src="src/AssetsManager.js"></script>
     <script src="src/boxObject/BoxFactory.js"></script>
     <script src="src/boxObject/boxConstants.js"></script>
-   
+    <script src="src/ButtonFactory.js"></script>
+    <script src="src/cursorsManager/CursorsManager.js"></script>
+    <script src="src/cursorsManager/cursorsConstants.js"></script>
 
     <style type="text/css">
         body {
