signals manager added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="phaser.min.js"></script>
     <script src="src/worldConstants.js"></script>
     <script src="src/boxRGB.js"></script>
+    <script src="src/SignalsManager.js"></script>
     <script src="src/AssetsManager.js"></script>
     <script src="src/boxObject/BoxFactory.js"></script>
     <script src="src/boxObject/boxConstants.js"></script>
