--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="src/AssetsManager.js"></script>
     <script src="src/boxObject/BoxFactory.js"></script>
     <script src="src/boxObject/boxConstants.js"></script>
+    <script src="src/boxObject/buttonConstants.js"></script>
     <script src="src/ButtonFactory.js"></script>
     <script src="src/cursorsManager/CursorsManager.js"></script>
     <script src="src/cursorsManager/cursorsConstants.js"></script>
