--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <script src="src/boxRGB.js"></script>
     <script src="src/AssetsManager.js"></script>
     <script src="src/boxObject/BoxFactory.js"></script>
-    <script src="src/boxObject/boxConstants.js"></script>
+    <script src="src/boxObject/BoxGroup.js"></script>
+      <script src="src/boxObject/boxConstants.js"></script>
     <script src="src/boxObject/buttonConstants.js"></script>
     <script src="src/ButtonFactory.js"></script>
     <script src="src/cursorsManager/CursorsManager.js"></script>
