--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <script src="src/AssetsManager.js"></script>
     <script src="src/boxObject/BoxFactory.js"></script>
     <script src="src/boxObject/BoxGroup.js"></script>
-      <script src="src/boxObject/boxConstants.js"></script>
+    <script src="src/boxObject/boxConstants.js"></script>
     <script src="src/boxObject/buttonConstants.js"></script>
     <script src="src/ButtonFactory.js"></script>
     <script src="src/cursorsManager/CursorsManager.js"></script>
     <script src="src/cursorsManager/cursorsConstants.js"></script>
+    <script src="src/levels/Stage0.js"></script>
 
     <style type="text/css">
         body {
