--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="src/boxObject/boxConstants.js"></script>
     <script src="src/boxObject/buttonConstants.js"></script>
     <script src="src/ButtonFactory.js"></script>
+     <script src="src/AnimationManager.js"></script>
     <script src="src/cursorsManager/CursorsManager.js"></script>
     <script src="src/cursorsManager/cursorsConstants.js"></script>
     <script src="src/levels/Stage0.js"></script>
