--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="phaser.min.js"></script>
     <script src="src/worldConstants.js"></script>
     <script src="src/boxRGB.js"></script>
+    <script src="src/InputCreator.js"></script>
     <script src="src/MainGame.js"></script>
     <script src="src/AssetsManager.js"></script>
     <script src="src/boxObject/BoxFactory.js"></script>
@@ -18,6 +19,7 @@
     <script src="src/cursorsManager/CursorsManager.js"></script>
     <script src="src/cursorsManager/cursorsConstants.js"></script>
     <script src="src/levels/Stage0.js"></script>
+    <script src="src/levels/Stage1.js"></script>
     <script src="src/levels/LevelMenu.js"></script>
 
     <style> 
