--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <script src="src/cursorsManager/cursorsConstants.js"></script>
     <script src="src/levels/Stage0.js"></script>
     <script src="src/levels/Stage1.js"></script>
+    <script src="src/levels/Stage2.js"></script>
+    <script src="src/levels/Stage3.js"></script>
     <script src="src/levels/LevelMenu.js"></script>
 
     <style> 
