Timer and end-of-level dialogs added

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <script src="src/levels/Stage2.js"></script>
     <script src="src/levels/Stage3.js"></script>
     <script src="src/levels/LevelMenu.js"></script>
+    <script src="src/levels/EndOfLevelDialog.js"></script>
+    <script src="src/levels/Timer.js"></script>
 
     <style> 
     @font-face {  font-family: 'rubik';  src: url('rubik-bold.ttf') format('truetype');}body {    font-family: 'rubik';}.fontLoader {    position: absolute;    left: -1000px;} 
