--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="src/InputCreator.js"></script>
     <script src="src/AssetsManager.js"></script>
     <script src="src/boxObject/BoxFactory.js"></script>
+    <script src="src/boxObject/Enemy.js"></script>
     <script src="src/boxObject/BoxGroup.js"></script>
     <script src="src/boxObject/boxConstants.js"></script>
     <script src="src/boxObject/buttonConstants.js"></script>
