working on menu

--- a/index.html
+++ b/index.html
@@ -23,23 +23,34 @@
     <script src="src/levels/Stage2.js"></script>
     <script src="src/levels/Stage3.js"></script>
     <script src="src/levels/LevelMenu.js"></script>
+    <script src="src/Menu.js"></script>
+    <script src="src/ButtonGuiModule.js"></script>
     <script src="src/levels/EndOfLevelDialog.js"></script>
     <script src="src/levels/Timer.js"></script>
-
-    <style> 
-    @font-face {  font-family: 'rubik';  src: url('rubik-bold.ttf') format('truetype');}body {    font-family: 'rubik';}.fontLoader {    position: absolute;    left: -1000px;} 
+    <style>
+    @font-face {
+        font-family: 'rubik';
+        src: url('rubik-bold.ttf') format('truetype');
+    }
+    
+    body {
+        font-family: 'rubik';
+    }
+    
+    .fontLoader {
+        position: absolute;
+        left: -1000px;
+    }
     </style>
 </head>
 
 <body>
-
-    <div style="font-family:rubik; position:absolute; "id="game"></div>
+    <div style="font-family:rubik; position:absolute; " id="game"></div>
     <script type="text/javascript">
-        window.onload = function () {
-            startBoxRGB();
-        }
+    window.onload = function() {
+        startBoxRGB();
+    }
     </script>
-
 </body>
 
 </html>
